--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "splashphp/splashphp",
-    "description": "A Slim Framework skeleton application for rapid development",
+    "description": "Php web framework for developing web applications",
     "keywords": [
         "microframework",
         "splashphp"
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": "^7.1.23 || ^7.5",
-        "splashphp/core": "^7.0"
+        "splashphp/core": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5"
@@ -30,8 +30,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "spl/",
-            "Splash\\": "src/Http/"
+            "App\\": "spl/"
         }
     },
     "autoload-dev": {
