--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,6 @@
         "php": "^7.1.23 || ^7.5",
         "splashphp/core": "^1.0"
     },
-    "require-dev": {
-        "phpunit/phpunit": "^7.5"
-    },
     "config": {
         "process-timeout": 0,
         "sort-packages": true
@@ -38,8 +35,9 @@
             "Tests\\": "tests/"
         }
     },
-    "scripts": {
-        "start": "php -S localhost:8080 -t public",
-        "test": "phpunit"
+     "config": {
+            "preferred-install": "dist",
+            "sort-packages": true,
+            "optimize-autoloader": true
     }
 }
